@@ -325,7 +325,7 @@
 
  #endif
 #else
- extern const unsigned char bmp_p_e_mos_data[] PROGMEM ;
+ extern const unsigned char bmp_p_e_mos[] PROGMEM ;
 #endif
 
 //*****************************************************************************
@@ -755,22 +755,16 @@
 	8, // The width of the bitmap.
 	32, // The height of the bitmap.
  #if (ICON_TYPE == 1)
-        0x02, 0x02, 0x02, 0x02,  0xFE, 0x00, 0x00, 0x00,
-                                                                                                                               
-        0x00, 0x20, 0x60, 0xA0,  0x3F, 0xA0, 0x60, 0x20,
-                                                                                                                               
-        0x00, 0x02, 0x02, 0x02,  0xFF, 0x02, 0x02, 0x02,
-                                                                                                                               
-        0x40, 0x40, 0x40, 0x40,  0x7F, 0x00, 0x00, 0x00
+	0x20, 0x20, 0x20, 0x20, 0xE0, 0x00, 0x00, 0x00,
+	0x00, 0x20, 0x60, 0xE0, 0xFF, 0xE0, 0x60, 0x20,
+	0x00, 0x02, 0x02, 0x02, 0xFF, 0x02, 0x02, 0x02,
+	0x08, 0x08, 0x08, 0x08, 0x0F, 0x00, 0x00, 0x00,
 
  #else
-	0x02, 0x02, 0x02, 0x02,  0xfe, 0x00, 0x00, 0x00, 
-
-	0x00, 0x20, 0x60, 0xe0,  0xff, 0xe0, 0x60, 0x20, 
-
-	0x00, 0x02, 0x02, 0x02,  0xff, 0x02, 0x02, 0x02, 
-
-	0x40, 0x40, 0x40, 0x40,  0x7f, 0x00, 0x00, 0x00, 
+	0x06, 0x06, 0x06, 0xFE, 0xFE, 0x00, 0x00, 0x00,
+	0x20, 0x60, 0xE0, 0xFF, 0xFF, 0xE0, 0x60, 0x20,
+	0x06, 0x06, 0x06, 0xFF, 0xFF, 0x06, 0x06, 0x06,
+	0x60, 0x60, 0x60, 0x7F, 0x7F, 0x00, 0x00, 0x00, 
  #endif
 };
 #else
