@@ -1,4 +1,5 @@
 #include "Transistortester.h"
+#include "bitmaps.h"
 
 
 #ifdef WITH_GRAPHICS
@@ -12,29 +13,6 @@ static const unsigned char * const bmp_number[3] PROGMEM =
    bmp_three_data
 };
 
-//extern const unsigned char bmp_n_e_mos_data[] PROGMEM;
-//extern const unsigned char bmp_p_e_mos_data[] PROGMEM;
-//extern const unsigned char bmp_n_d_mos_data[] PROGMEM;
-//extern const unsigned char bmp_p_d_mos_data[] PROGMEM;
-//static const unsigned char * const bmp_mosfet[4] PROGMEM =
-//{
-//   &bmp_n_e_mos_data[0],
-//   &bmp_p_e_mos_data[0],
-//   &bmp_n_d_mos_data[0],
-//   &bmp_p_d_mos_data[0]
-//};
-
-//extern const unsigned char bmp_n_e_igbt_data[] PROGMEM;
-//extern const unsigned char bmp_p_e_igbt_data[] PROGMEM;
-//extern const unsigned char bmp_n_d_igbt_data[] PROGMEM;
-//extern const unsigned char bmp_p_d_igbt_data[] PROGMEM;
-//static const unsigned char * const bmp_igbt[4] PROGMEM =
-//{
-//   &bmp_n_e_igbt_data[0],
-//   &bmp_p_e_igbt_data[0],
-//   &bmp_n_d_igbt_data[0],
-//   &bmp_p_d_igbt_data[0]
-//};
 
 
 void lcd_draw_pin(unsigned char index, unsigned char x, unsigned char y)
@@ -51,38 +29,124 @@ void lcd_draw_trans_pins( unsigned char xb, unsigned char yb)
    const unsigned char *pbmp;
 
    pbmp = (const unsigned char *)pgm_read_word(&bmp_number[_trans->e]);
-   lcd_pgm_bitmap(pbmp, 120, 56, 0);
+   lcd_pgm_bitmap(pbmp, 121, 56, 0);
    pbmp = (const unsigned char *)pgm_read_word(&bmp_number[_trans->b]);
    lcd_pgm_bitmap(pbmp, xb, yb, 0);
    pbmp = (const unsigned char *)pgm_read_word(&bmp_number[_trans->c]);
-   lcd_pgm_bitmap(pbmp, 120, 32, 0);
+   lcd_pgm_bitmap(pbmp, 121, 32, 0);
 }
 
+void ShowIcons(void) {
+#define ShowTime 10000
+ lcd_clear();
+ lcd_big_icon(BJT_NPN|LCD_UPPER_LEFT);
+ lcd_big_icon(BJT_NPN|LCD_UPPER_RIGHT);
+ lcd_update_icon(bmp_pnp);	// update for PNP
+ lcd_set_cursor(5,2);
+ lcd_MEM_string(NPN_str);
+ lcd_set_cursor(5,10);
+ lcd_MEM_string(PNP_str);
+ wait_for_key_ms(ShowTime);
 
-//void lcd_draw_mosfet(unsigned char index)
-//{
-//#define X_POS 88	/* left side x-Position of bitmap */ 
-//#define Y_POS 32	/* upper side y-position of the bitmap, must match to multiply of 8 */
-//   const unsigned char *pbmp;
+ lcd_clear();
+ lcd_big_icon(N_JFET|LCD_LOWER_LEFT);
+ lcd_big_icon(N_JFET|LCD_LOWER_RIGHT);
+ lcd_update_icon(bmp_p_jfet);	// update to P_JFET
+ lcd_set_cursor(0,0);
+ lcd_data('N');
+ lcd_data('-');
+ lcd_MEM_string(jfet_str);
+ lcd_set_cursor(0,8);
+ lcd_data('P');
+ lcd_data('-');
+ lcd_MEM_string(jfet_str);
+ wait_for_key_ms(ShowTime);
 
-//   lcd_pgm_bitmap(bmp_n_e_mos_data, X_POS, Y_POS, 0);
-//   if (index != 0) {
-//      // update the n_e_mos bitmap at relativ location 9,8
-//      pbmp = (const unsigned char *)pgm_read_word(&bmp_mosfet[index]);
-//      lcd_pgm_bitmap(pbmp, X_POS+9, Y_POS+8, 0);
-//   }
-//}
+ lcd_clear();
+ lcd_big_icon(N_E_IGBT|LCD_UPPER_LEFT);
+ lcd_big_icon(N_E_IGBT|LCD_UPPER_RIGHT);
+ lcd_update_icon(bmp_p_e_igbt);	// update to P-E-IGBT
+ lcd_set_cursor(5,0);
+ lcd_data('N');
+ lcd_data('-');
+ lcd_data('E');
+ lcd_MEM_string(igbt_str);
+ lcd_set_cursor(6,8);
+ lcd_data('P');
+ lcd_data('-');
+ lcd_data('E');
+ lcd_MEM_string(igbt_str);
+ wait_for_key_ms(ShowTime);
 
-//void lcd_draw_igbt(unsigned char index)
-//{
-//   const unsigned char *pbmp;
-//   lcd_pgm_bitmap(bmp_n_e_igbt_data, X_POS, Y_POS, 0);
+ lcd_clear();
+ lcd_big_icon(N_E_IGBT|LCD_LOWER_LEFT);
+ lcd_update_icon(bmp_n_d_igbt);	// update to N-D-IGBT
+ lcd_big_icon(N_E_IGBT|LCD_LOWER_RIGHT);
+ lcd_update_icon(bmp_p_d_igbt);	// update to P-D-IGBT
+ lcd_set_cursor(0,0);
+ lcd_data('N');
+ lcd_data('-');
+ lcd_data('D');
+ lcd_MEM_string(igbt_str);
+ lcd_set_cursor(1,8);
+ lcd_data('P');
+ lcd_data('-');
+ lcd_data('D');
+ lcd_MEM_string(igbt_str);
+ wait_for_key_ms(ShowTime);
 
-//   if (index != 0) {
-//      // update the n_e_igbt bitmap at relativ location 12, 0
-//      pbmp = (const unsigned char *)pgm_read_word(&bmp_igbt[index]);
-//      lcd_pgm_bitmap(pbmp, X_POS+12, Y_POS, 0);
-//   }
-//}
+ lcd_clear();
+ lcd_big_icon(N_E_MOS|LCD_UPPER_LEFT);
+ lcd_big_icon(N_E_MOS|LCD_UPPER_RIGHT);
+ lcd_update_icon(bmp_p_e_mos);  // update to P-E-MOS
+ lcd_set_cursor(5,0);
+ lcd_data('N');
+ lcd_data('-');
+ lcd_data('E');
+ lcd_MEM_string(mosfet_str);
+ lcd_set_cursor(6,8);
+ lcd_data('P');
+ lcd_data('-');
+ lcd_data('E');
+ lcd_MEM_string(mosfet_str);
+ wait_for_key_ms(ShowTime);
+
+ lcd_clear();
+ lcd_big_icon(N_E_MOS|LCD_LOWER_LEFT);
+ lcd_update_icon(bmp_n_d_mos);  // update to N-D-MOS
+ lcd_big_icon(N_E_MOS|LCD_LOWER_RIGHT);
+ lcd_update_icon(bmp_p_d_mos);  // update to P-D-MOS
+ lcd_set_cursor(0,0);
+ lcd_data('N');
+ lcd_data('-');
+ lcd_data('D');
+ lcd_MEM_string(mosfet_str);
+ lcd_set_cursor(1,8);
+ lcd_data('P');
+ lcd_data('-');
+ lcd_data('D');
+ lcd_MEM_string(mosfet_str);
+ wait_for_key_ms(ShowTime);
+
+ lcd_clear();
+ lcd_big_icon(TRIAC|LCD_UPPER_LEFT);
+ lcd_big_icon(THYRISTOR|LCD_UPPER_RIGHT);
+ lcd_big_icon(INDUCTOR|LCD_LOWER_LEFT);
+ lcd_big_icon(CAPACITOR|LCD_LOWER_RIGHT);
+ wait_for_key_ms(ShowTime);
+
+ lcd_clear();
+ lcd_big_icon(DIODE_C_A|LCD_UPPER_LEFT);
+ lcd_big_icon(DIODES_C_A_C_A|LCD_UPPER_RIGHT);
+ lcd_big_icon(DIODES_A_C_C_A|LCD_LOWER_LEFT);
+ lcd_big_icon(DIODES_C_A_A_C|LCD_LOWER_RIGHT);
+ wait_for_key_ms(ShowTime);
+
+ lcd_clear();
+ lcd_big_icon(RESISTOR|LCD_UPPER_LEFT);
+ lcd_big_icon(RESISTORS|LCD_UPPER_RIGHT);
+ wait_for_key_ms(ShowTime);
+}
+
 #endif
 
